fix: swaggar config
